--- a/assets/styles/temp.css
+++ b/assets/styles/temp.css
@@ -21,7 +21,6 @@
     height: auto;
     margin: auto;
     position: relative;
-    background-color: rgb(70,70,70);
     padding: 10px;
     border-radius: 20px;
     text-align: center;
